nbv_code/ros2_ws2/log/build_2025-02-11_01-36-41/my_robot_nbv/stderr.log
  File "/home/jajayu/TomatoHarvesting_NextBestView/nbv_code/ros2_ws2/install/my_robot_nbv/lib/python3.10/site-packages/my_robot_nbv/nbv_tompcd_filter.py", line 302
    preAnew_filter_points_np = np.append(, filtered_points_np, axis=0)
                                         ^
SyntaxError: invalid syntax

